Header buttons fixed

--- a/src/components/buttons/buttons.css
+++ b/src/components/buttons/buttons.css
@@ -27,6 +27,10 @@
   padding: 30 px 0 12px 0;
   text-decoration: none;
   color: #3730a3;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 28px;
 }
 
 /*visit-linkedin*/
@@ -56,4 +60,8 @@
   padding: 30 px 0 12px 0;
   text-decoration: none;
   color: #3730a3;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 28px;
 }
