--- a/src/App.css
+++ b/src/App.css
@@ -437,3 +437,62 @@
   object-fit: fill;
 }
 /*PROJECTS END*/
+
+/*FOOTER START*/
+
+.footer-mainbox {
+  width: 1440px;
+  height: 454px;
+  background-color: #f9f9f9;
+}
+
+.contact-box {
+  width: 483px;
+  height: 290px;
+  margin: 84px 478px 80px 479px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 0;
+  gap: 24px;
+}
+
+.contact-box h2 {
+  /* width: 100%; */
+  height: 72px;
+  font-size: 48px;
+  font-weight: 700;
+  line-height: 72px;
+  color: #4731d3;
+}
+
+.contact-box .motto {
+  width: 448px;
+  height: 72px;
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 36px;
+  margin-left: 17.5px;
+  color: #120b39;
+}
+
+.contact-box .email {
+  width: 269px;
+  height: 24px;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 24.2px;
+}
+
+.contact-box a {
+  color: #4731d3;
+}
+
+.social-box {
+  width: 212px;
+  height: 35px;
+  display: flex;
+  flex-direction: row;
+}
+
+/*FOOTER END*/
