--- a/src/App.css
+++ b/src/App.css
@@ -32,16 +32,12 @@
   width: fit-content;
 }
 
-.header-top-left .language p {
+.header-top-left .language {
   width: 138px;
   height: 18px;
   margin-left: 851px;
   margin-top: 35px;
-  color: #caf181;
-}
-
-.language span {
-  color: #d9d9d9;
+  cursor: pointer;
 }
 
 .header-top-right {
@@ -176,7 +172,7 @@
 }
 
 .skill-elements .skill-title h2 {
-  width: 128px;
+  width: 200px;
   height: 58px;
   font-size: 48px;
   font-weight: 700;
@@ -185,7 +181,7 @@
 }
 
 .img1 {
-  margin-left: 120px;
+  margin-left: 50px;
   width: 290px;
   height: 430px;
   object-fit: cover;
