Dark mode switch added

--- a/src/App.css
+++ b/src/App.css
@@ -38,6 +38,7 @@
   margin-left: 851px;
   margin-top: 35px;
   cursor: pointer;
+  text-align-last: right;
 }
 
 .header-top-right {
@@ -47,20 +48,83 @@
 }
 
 .light-dark {
+  display: flex;
+  flex-direction: row;
   margin-left: 18px;
   margin-top: 32px;
+  gap: 9px;
 }
 
-.light-dark input {
-  width: 55px;
+.slider.round {
+  width: 50px;
   height: 24px;
 }
 
-.light-dark label span {
+.mode-text {
   color: #4731d3;
   width: 103px;
   height: 18px;
   font-weight: 700;
+}
+
+.toggle-switch {
+  display: flex;
+  width: 55px;
+  height: 24px;
+  transform: matrix(-1, 0, 0, 1, 0, 0);
+}
+
+.toggle-switch-checkbox {
+  display: none;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 5px;
+  bottom: 0;
+  background-color: #8f88ff;
+  transition: 0.4s;
+  border-radius: 24px;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 18px;
+  width: 18px;
+  left: 3px;
+  bottom: 3px;
+  background-color: #ffe86e;
+  transition: 0.6s;
+  border-radius: 50%;
+}
+.slider:after {
+  position: absolute;
+  content: "";
+  height: 14px;
+  width: 14px;
+  left: 3px;
+  bottom: 3px;
+  background-color: #ffe86e;
+  transition: 0.6s;
+  border-radius: 50%;
+  transform: translateX(0px) translateY(-2px);
+}
+
+.toggle-switch-checkbox:checked + .slider {
+  background-color: #3a3a3a;
+}
+
+.toggle-switch-checkbox:checked + .slider:before {
+  transform: translateX(26px);
+}
+
+.toggle-switch-checkbox:checked + .slider:after {
+  transform: translateX(22px) translateY(-2px);
+  background-color: #3a3a3a;
 }
 
 /* Header top end*/
